--- a/app/views/order_items/my_cart.html.erb
+++ b/app/views/order_items/my_cart.html.erb
@@ -4,6 +4,7 @@
     <% if @order_items.empty? %>
     <h2>Your cart is empty.</h2>
     <h4>🥕 aint gonna add themselves!</h4>
+  </div>
 
     <% else %>
     <div class="col-sm-12" style="text-align: left; vertical-align: top; margin-top: 20px">
