--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,40 +1,40 @@
 <div class="container">
 
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <h2 style="margin-bottom: 20px; margin-top: 20px">Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+    <%= f.input :email, required: true, autofocus: true, disabled: true, hint: "You cannot change your email" %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+    <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
     <%= f.input :username, required: true, autofocus: true %>
     <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
+    hint: "leave it blank if you don't want to change it",
+    required: false,
+    input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
+    required: false,
+    input_html: { autocomplete: "new-password" } %>
     <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+    hint: "we need your current password to confirm your changes",
+    required: true,
+    input_html: { autocomplete: "current-password" } %>
     <%= f.input :address,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new street address" } %>
+    hint: "leave it blank if you don't want to change it",
+    required: false,
+    input_html: { autocomplete: "new street address" } %>
     <%= f.input :avatar, as: :file %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update", class:"btn btn-danger" %>
+  <div class="form-actions" style="margin-top: 20px; margin-bottom: 20px">
+    <%= f.button :submit, "Update", class:"btn btn-danger w-100" %>
   </div>
-<% end %>
+  <% end %>
 
-<%= link_to "Back", :back %>
+  <%= link_to "<< Back", :back %>
 
 </div>
