--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Sign up</h2>
+  <h2 style="margin-bottom: 20px; margin-top: 20px">Sign up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
@@ -12,6 +12,7 @@
     <%= f.input :email,
                 required: true,
                 autofocus: true,
+                hint: "Note: email cannot be changed after registration",
                 input_html: { autocomplete: "email" }%>
     <%= f.input :password,
                 required: true,
@@ -27,7 +28,7 @@
     <%= f.input :avatar, as: :file %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions" style="margin-top: 20px; margin-bottom: 20px">
     <%= f.button :submit, "Sign up", class:"btn btn-success w-100" %>
   </div>
 <% end %>
