--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,28 +1,31 @@
 <div class="container">
+
+  <h2 style="margin-bottom: 20px; margin-top: 20px"> List your crops!</h2>
+
   <div class ="form">
-    <div class="form-total">
+    <div class="form-inputs">
       <%= simple_form_for(@listing) do |f| %>
-      <div class="form-title">
-        <%= f.label :title%><br>
-        <%= f.text_field :title%><br><br>
-        <%= f.label :description%><br>
-        <%= f.text_field :description%><br><br>
-        <%= f.label :category%><br>
-        <%= f.select :category, ["Fresh Vegetables", "Frozen Vegetables", "Ready To Eat Salads", "Grow Your Own Microgreens", "Other Vegetables"]%><br><br>
-        <%= f.label :quantity%><br>
-        <%= f.text_field :quantity%><br><br>
-        <%= f.label :unit_price%><br>
-        <%= f.text_field :unit_price%><br><br>
-        <%= f.input :expiry_date, as: :date %><br>
-        <%= f.input :photo, as: :file %>
-      </div>
-      <div class="button">
+
+      <%= f.input :title, required: true, autofocus: true %>
+      <%= f.input :description, required: false %>
+      <%= f.input :category, required: true, collection: ["Fresh Vegetables", "Frozen Vegetables", "Ready To Eat Salads", "Grow Your Own Microgreens", "Other Vegetables"] %>
+      <%= f.input :quantity, required: true %>
+      <%= f.input :unit_price, required: true %>
+      <%= f.input :expiry_date, as: :date, start_year: Date.today.year, end_year: Date.today.year + 1, order: [:day, :month, :year] %>
+      <%= f.input :photo, as: :file %>
+
+      <div class="button" style="margin-top: 20px; margin-bottom: 20px">
         <%= f.submit "List Your Crops!", class: "btn btn-success w-100"%>
       </div>
-        <% end %>
-      </div>
+      <% end %>
+    </div>
+
   </div>
+  <%= link_to "<< Back", :back %>
+
 </div>
+
+
 
 
 
