--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,4 @@
 <div class="row">
-
   <div class="col-sm-12" style="margin-top: 30px">
     <h2>Transaction Confirmation</h2>
   </div>
@@ -9,10 +8,12 @@
   <div class="col-sm-12" style="margin-top: 20px">
     <h6>Your ordered items:</h6>
     <% @order.order_items.each do |item| %>
+
     <div class="card-product">
       <% if item.listing.photo.attached? %>
       <img src="https://res.cloudinary.com/dcm2heeuf/image/upload/v1620723373/<%=item.listing.photo.key %>" />
       <% else %>
+      <img src="https://i.ibb.co/StSn7Tm/still-growing.jpg"/>
       <% end %>
       <div class="card-product-infos d-flex flex-column flex-grow-1">
         <div class="row d-flex flex-row justify-content-between align-items-center px-3">
@@ -28,67 +29,60 @@
             <p>Category: <%= item.listing.category %></p>
             <p>Seller: <%= item.listing.user.username %></p>
           </div>
-
         </div>
       </div>
     </div>
-
-
-
-
-
-
     <% end %>
-
     <div class="col-sm-12" style="background-color: grey; text-align: right; padding:8px">
       <h5>TOTAL AMOUNT: $<%= @order.total_amounts %></h5>
     </div>
   </div>
+</div>
 
-  <!-- GROCER/SELLER DETAILS -->
+<!-- GROCER/SELLER DETAILS -->
 
+<div class="row">
   <div class="col-sm-12" style="margin-top: 20px">
     <h6>Your grocer:</h6>
-    <div class="card-product-big-avatar" style="min-height: 200px">
-      <% @order.order_items.limit(1).each do |item| %>
-      <% user = User.find(item.listing.user_id) %>
-      <%= render "shared/user-avatar", user: user %>
-
-      <div class="col-lg-12" style="background-color: white; border: grey 1px; margin-left: 10px">
-        <% user = User.find(item.listing.user_id) %>
-        <p><strong>Name: </strong><%= user.username %></p>
-        <p><strong>Contact: </strong><%= user.email %></p>
-        <p><strong>Address: </strong><%= user.address %></p>
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="card-product-big-avatar" style="min-height: 200px">
+          <% @order.order_items.limit(1).each do |item| %>
+          <% user = User.find(item.listing.user_id) %>
+          <%= render "shared/user-avatar", user: user %>
+          <div class="group" style="background-color: white; border: grey 1px; margin-left: 10px">
+            <% user = User.find(item.listing.user_id) %>
+            <p><strong>Name: </strong><%= user.username %></p>
+            <p><strong>Contact: </strong><%= user.email %></p>
+            <p><strong>Address: </strong><%= user.address %></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div id="map"
+        style="width: 100%; height: 100%"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
       </div>
     </div>
-
-    <div id="map"
-     style="width: 100%; height: 600px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-
-  </div>
-
-
-  <!-- CUSTOMER DETAILS -->
-
-  <div class="col-sm-12" style="margin-top: 20px">
-    <h6>Your details:</h6>
-    <div class="card-product-big-avatar" style="min-height: 200px">
-      <% user = User.find(item.user_id) %>
-      <%= render "shared/user-avatar", user: user %>
-
-      <div class="col-lg-12" style="background-color: white; border: grey 1px; margin-left: 10px">
-        <% user = User.find(item.user_id) %>
-        <p>Name: </strong><%= user.username %></p>
-        <p><strong>Contact: </strong><%= user.email %></p>
-        <p><strong>Address: </strong><%= user.address %></p>
-      </div>
-    </div>
-
-    <% end %>
   </div>
 </div>
 
+<!-- CUSTOMER DETAILS -->
 
-
+<div class="row">
+ <div class="col-sm-12" style="margin-top: 20px">
+  <h6>Your details:</h6>
+  <div class="card-product-big-avatar" style="min-height: 200px">
+    <% user = User.find(item.user_id) %>
+    <%= render "shared/user-avatar", user: user %>
+    <div class="col-lg-12" style="background-color: white; border: grey 1px; margin-left: 10px">
+      <% user = User.find(item.user_id) %>
+      <p>Name: </strong><%= user.username %></p>
+      <p><strong>Contact: </strong><%= user.email %></p>
+      <p><strong>Address: </strong><%= user.address %></p>
+    </div>
+  </div>
+  <% end %>
+</div>
+</div>
