Revert "fixed quantity"

--- a/app/views/listings/my_listings.html.erb
+++ b/app/views/listings/my_listings.html.erb
@@ -39,7 +39,7 @@
             <%= link_to "Delete",
             listing_path(listing),
             method: :delete,
-            data: { confirm: "Are you sure?" }, class:"bi bi-trash", remote: true %>
+            data: { confirm: "Are you sure?" }, class:"bi bi-trash" %>
           </div>
         </div>
       </div>
